# brainsick

./: .gitattributes  .gitignore  Cargo.lock.license  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
bscc/: Cargo.toml
bscc/src/: argparse.rs  main.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
docs/examples/: hello.bas
hir/: Cargo.toml
hir/src/: lib.rs
link/: Cargo.toml
link/src/: lib.rs
stdlib/: Cargo.toml
stdlib/src/: conversion.rs  interaction.rs  lib.rs
syntax/: Cargo.toml  build.rs  vb.ungram
syntax/src/: ast.rs  lex.rs  lib.rs  parse.rs
ty/: Cargo.toml
ty/src/: iface.rs  lib.rs  types.rs
